# app/binhusenstore/products/product_controller.php
@@ -84,8 +84,9 @@ class Binhusenstore_product
     {
         $req = Flight::request();
         $limit = $req->query->limit;
+        $id_category = $req->query->id_category;
 
-        $result = $this->Binhusenstore_product->get_products($limit);
+        $result = $this->Binhusenstore_product->get_products($limit, $id_category);
         
         $is_exists = count($result) > 0;
 
